--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#trabajos">Trabajos</a></li>
                 <li><a href="#gustos">Hobbies</a></li>
                 <li><a href="#paz">Paz</a></li>
+                <li><a href="public/lorena.html">Lorena</a></li>
             </ul>
         </nav>
     </div>
