--- a/public/lorena.html
+++ b/public/lorena.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/gif" href="animated_favicon1.gif">
     </head>
     <body>
-        <div class="fotoLorena">
+        <div class="fotoLorena" style="color:gray">
             <h1 class="nombre">Lorena Sánchez Fernández</h1>
             <h2 class="sub-title">Te Amo</h2>
             <h3 class="sub-title">Yo más</h3>
